[package]
name = "cid"
version = "0.5.0"
description = "CID in rust"
homepage = "https://github.com/multiformats/rust-cid"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>"]
keywords = ["ipld", "ipfs", "cid", "multihash", "multiformats"]
license = "MIT"
readme = "README.md"
edition = "2018"

[package.metadata.release]
pre-release-commit-message = "Release {{version}} 🎉🎉"
no-dev-version = true

[dependencies]
multihash = "0.11.2"
multibase = "0.8.0"
unsigned-varint = "0.3"

quickcheck = { version = "0.9.2", optional = true }
rand = { version = "0.7.3", optional = true }

serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11", optional = true }
serde_cbor = { version = "0.11.1", features = ["tags"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
quickcheck = "0.9.2"
rand = "0.7.3"
multihash = { version = "0.11", features = ["test"] }

[features]
test = ["quickcheck", "rand"]
impl-serde = ["serde", "serde_bytes", "serde_cbor", "serde_json"]
