[package]
name = "cid"
version = "0.5.0"
description = "CID in rust"
homepage = "https://github.com/multiformats/rust-cid"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>"]
keywords = ["ipld", "ipfs", "cid", "multihash", "multiformats"]
license = "MIT"
readme = "README.md"
edition = "2018"

[package.metadata.release]
pre-release-commit-message = "Release {{version}} 🎉🎉"
no-dev-version = true

[dependencies]
multihash = "0.11.2"
multibase = "0.8.0"
unsigned-varint = "0.3"

quickcheck = { version = "0.9.2", optional = true }
rand = { version = "0.7.3", optional = true }

minicbor = { version = "0.4.0", features = ["std"], optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
multihash = { version = "0.11", features = ["test"] }
quickcheck = "0.9.2"
rand = "0.7.3"

[features]
test = ["quickcheck", "rand"]
cbor = ["minicbor"]
json = ["serde", "serde_json"]
